# CometDownloadCLI

./: .env-sample  .gitignore  README.md  build.gradle  cometCLI  pyproject.toml  settings.gradle
.github/workflows/: android-release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/johanwes/cometdownload/: DownloadForegroundService.kt  MainActivity.kt
app/src/main/python/: comet
app/src/main/res/values/: strings.xml  styles.xml
comet/: __main__.py  android_api.py  app.py  backend.py  config.py  main.py
scripts/: comet_search_download.py
