[project]
name = "comet"
version = "0.1.0"
description = "Minimal local backend for scripts/comet_search_download.py."
authors = [
    { name = "Goldy", email = "153996346+g0ldyy@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "fastapi",
    "rich",
    "uvicorn",
    "torrent-parse-rank @ git+https://github.com/g0ldyy/torrent-parse-rank.git",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
